[WEBDEV-449][WEBDEV-469] <ul> tag fixes & spacing for multiple hints.

--- a/src/stylesheets/components/_highlight.scss
+++ b/src/stylesheets/components/_highlight.scss
@@ -52,6 +52,8 @@
 /*--- Label Components ---*/
 
 .hint {
-  margin-right: $base-spacing-unit;
   padding: ($base-spacing-unit - 4) $base-spacing-unit;
+  & + .hint {
+    margin-right: $base-spacing-unit;
+  }
 }
